# Jack-of-All-Templates

./: LICENSE  README.rst  copier.yaml  copier_julia.yaml  copier_python.yaml  copier_rust.yaml  pyproject.toml
.gitea/workflows/: test.yaml
includes/: badges.jinja  name-slug.jinja
julia_template/: .JuliaFormatter.toml  AUTHORS.rst.jinja  HISTORY.rst.jinja  Project.toml.jinja  README.rst.jinja
julia_template/src/: {{ julia_module_name }}.jl.jinja
julia_template/test/: runtests.jl.jinja  {{ julia_module_name }}_tests.jl.jinja
julia_template/{% if julia_include_docs %}docs{% endif %}/: Project.toml.jinja  localmake.jl.jinja  make.jl.jinja
julia_template/{% if julia_include_docs %}docs{% endif %}/src/: index.md.jinja
python_template/: CONTRIBUTING.rst.jinja  HISTORY.rst.jinja  README.rst.jinja  pyproject.toml.jinja  {% if not project_public %}README.rst{% endif %}.jinja  {% if project_public %}AUTHORS.rst{% endif %}.jinja  {% if project_public %}CONTRIBUTING.rst{% endif %}.jinja  {% if project_public %}README.rst{% endif %}.jinja
python_template/src/{{ module_name }}/: __init__.py.jinja  main.py.jinja
python_template/src/{{ python_module_name }}/: __init__.py.jinja  main.py.jinja
python_template/tests/: conftest.py  test_main.py.jinja
python_template/{% if include_sphinx %}docs{% endif %}/: conf.py.jinja  index.rst.jinja  rename_me2.rst
python_template/{% if python_include_docs %}docs{% endif %}/: conf.py.jinja  rename_me1.rst  usage.rst
rust_template/: AUTHORS.md.jinja  Cargo.toml.jinja  HISTORY.md.jinja  README.md.jinja
rust_template/.gitea/workflows/: test.yaml
rust_template/src/: {% if rust_targets != 'Binary' %}lib.rs{% endif %}.jinja
rust_template/tests/: greeter_test.rs.jinja
solidity_template/: .env.example  LICENSE.jinja  README.rst.jinja  pyproject.toml.jinja
solidity_template/scripts/: deploy_token.py
solidity_template/tests/: conftest.py  test_approve.py  test_transfer.py  test_transferFrom.py
tests/: conftest.py  test_julia_template.py  test_python_template.py  test_rust_template.py  test_solidity_template.py
